# MinjiChat

./: package.json  pnpm-lock.yaml  tailwind.config.js
src/: App.tsx  Layout.tsx  ThemeContext.tsx  i18n.js  index.css  main.tsx  mock.ts  router.tsx  types.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: db.rs  extension.rs  lib.rs  main.rs  script.rs  types.rs  whisper.rs
src/components/: Audio.tsx  Settings.tsx  Sidebar.tsx  SidebarItems.tsx  SvgIcons.tsx  VirtualList.tsx  Whisper.tsx  WhisperDetail.tsx
src/components/Settings/: About.tsx  AboutMe.tsx  AudioSettings.tsx  NormalSettings.tsx  WhisperSettings.tsx
src/hooks/: useDynamicHeight.ts  useVirtualList.ts
src/locales/: en.json  ja.json  ko.json  zh-Hant.json  zh.json
