[package]
name = "minjichat"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "minjichat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }
cmake = "0.1.52"
dirs = "5.0.1"

[dependencies]
tauri = { version = "2.2.1", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5.0.1"
anyhow = "1.0.95"
flume = "0.11.1"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-appender = "0.2.3"
rust-embed = "8.5.0"
ffmpeg-sidecar = "2.0.5"
md5 = "0.7.0"

